--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
       <!-- Required meta tags always come first -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +12,7 @@
       <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="css/styles.css">
       <title>Ristorante Con Fusion</title>
+
 </head>
 
 <body>
@@ -29,8 +31,7 @@
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+        <div class="row row-content align-items-center"><div class="col-12 col-sm-4 order-sm-last -md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
